# dely

./: .gitignore  Cargo.toml  README.md  dely.toml  docker-compose.yml
certs/: localhost.key  localhost.pem
certs/ca/: rootCA.key  rootCA.pem
dely_app/: README.md  pubspec.yaml
dely_app/.dart_tool/: package_config.json  package_config_subset
dely_app/.dart_tool/flutter_build/05fe719122c2b17ad982188de2724284/: .filecache  debug_macos_bundle_flutter_assets.stamp  debug_macos_framework.stamp  debug_unpack_macos.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.d  kernel_snapshot.stamp  outputs.json
dely_app/android/app/: build.gradle
dely_app/android/app/src/main/: AndroidManifest.xml
dely_app/android/app/src/main/kotlin/com/example/dely_app/: MainActivity.kt
dely_app/android/app/src/profile/: AndroidManifest.xml
dely_app/ios/Runner/: Info.plist
dely_app/ios/Runner.xcodeproj/: project.pbxproj
dely_app/lib/: main.dart
dely_app/linux/: CMakeLists.txt  my_application.cc
dely_app/macos/Runner.xcodeproj/: project.pbxproj
dely_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
dely_app/macos/Runner/Configs/: AppInfo.xcconfig
dely_app/test/: widget_test.dart
dely_app/web/: index.html  manifest.json
dely_app/windows/: CMakeLists.txt
dely_app/windows/runner/: Runner.rc  main.cpp
dely_macros/: Cargo.toml
dely_sync/: Cargo.toml
dely_sync/src/: main.rs
dely_web/: Cargo.toml
dely_web/src/: main.rs
src/: domain.rs  infrastructure.rs  lib.rs  main.rs
src/core/: domain.rs
src/customer/: domain.rs
src/domain/: core.rs  customer.rs
src/domain/core/: customer.rs  extra_service.rs  media.rs  prostitute.rs  reservation.rs  reserve.rs  schedule.rs  service.rs  shift.rs
src/infrastructure/: core.rs
src/infrastructure/core/: extra_service.rs  media.rs  prostitute.rs  schedule.rs
src/reserve/: domain.rs
