[package]
name = "dely"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
bytes = "1.4.0"
chrono = "0.4.23"
eventstore = "2.2.0"
num-format = "0.4.4"
mime = "0.3.16"
once_cell = "1.17.1"
rs-snowflake = "0.6.0"
serde = "1.0.152"
serde_json = "1.0.93"
serde_with = "2.3.0"
thiserror = "1.0.39"
tokio = { version = "1.25.0", features = ["full"] }
