[workspace]
members = ["dely_*"]

[workspace.package]
version = "0.1.0"
authors = ["Masaki Kuraya"]
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.64"
axum = "0.6.12"
axum-server = { version = "0.3", features = ["tls-rustls"] }
base64 = "0.21.0"
bio = "1.1.0"
bytes = { version = "1.4.0", features = ["serde"] }
chrono = "0.4.23"
config = "0.13.3"
derive_more = "0.99.17"
eventstore = "2.2.0"
futures = "0.3.27"
image = "0.24.6"
intervaltree = { version = "0.2.7", features = ["serde"] }
meilisearch-sdk = "0.22.0"
mime = "0.3.16"
mp4parse = "0.12.0"
num-format = "0.4.4"
once_cell = "1.17.1"
rs-snowflake = "0.6.0"
serde = "1.0.159"
serde_bytes = "0.11.9"
serde_json = "1.0.93"
serde_with = "2.3.0"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = "1.3.0"

[package]
name = "dely"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
bio.workspace = true
bytes.workspace = true
chrono.workspace = true
config.workspace = true
derive_more.workspace = true
eventstore.workspace = true
image.workspace = true
mime.workspace = true
mp4parse.workspace = true
num-format.workspace = true
once_cell.workspace = true
rs-snowflake.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
tracing.workspace = true