[package]
name = "dely_sync"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
dely = { path = "../" }
eventstore.workspace = true
meilisearch-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
